2007-09-17  Satoshi Nakagawa <artension@gmail.com>

	Improved server dialog.

2007-09-16  Satoshi Nakagawa <artension@gmail.com>

	Improved settings of tab key actions on preference dialog.

2007-09-16  Satoshi Nakagawa <artension@gmail.com>

	Introduced priority for nickname completion. A patch from Dreamer3.

2007-09-16  Satoshi Nakagawa <artension@gmail.com>

	Added /me support.

2007-09-14  Satoshi Nakagawa <artension@gmail.com>

	Changed to raise RunTimeError when passed objects different from original objects in calling back dataSource methods.

2007-09-08  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, cancel reconnecting should be enabled in connecting.

2007-09-08  Satoshi Nakagawa <artension@gmail.com>

	Released 0.9.6.

2007-09-08  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, single-line text with a new line on the tail should be treated as single-line text in pasting.

2007-09-08  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, URL should be unescaped on copy from right click menu.

2007-09-07  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, paste dialog should be showed when clipboard has multi-line text.

2007-09-05  Satoshi Nakagawa <artension@gmail.com>

 	Completed nick right-click menu on log views.

2007-09-04  Satoshi Nakagawa <artension@gmail.com>

	Implementing nick right-click menu on log views.

2007-09-03  Satoshi Nakagawa <artension@gmail.com>

	Changed to support new implementation of NSArray and NSDictionary.

2007-09-02  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, application crashes on pushed ok button on a server properties dialog.

2007-09-01  Satoshi Nakagawa <artension@gmail.com>

	Changed to try RUBYCOCOA_THREAD_HOOK_DISABLE = 1.

2007-08-30  Satoshi Nakagawa <artension@gmail.com>

	Changed to return the same objects in NSOutlineView datasource.

2007-08-29  Satoshi Nakagawa <artension@gmail.com>

	Added confirmation on deleting a server from menu.