@@ -1,5 +1,9 @@
 2007-09-17  Satoshi Nakagawa <artension@gmail.com>
 
+	Improved channel dialog.
+
+2007-09-17  Satoshi Nakagawa <artension@gmail.com>
+
 	Improved server dialog.
 
 2007-09-16  Satoshi Nakagawa <artension@gmail.com>
